...
          <Header white />
          <HeaderIcons>
            <View>
              <Feather
                size={22}
                color="white"
                testID="notification-icon"
                name="bell"
                onPress={() => {
                  router.push('/notificacoes');
                }}
                style={{ marginRight: 16 }}
              />
...
            </View>
            <Icon onPress={handleToProfile}>
              <PersonIconSmall />
            </Icon>
          </HeaderIcons>
        </HeaderView>
        <Title testID="user-name">Olá, {user?.profile?.given_name}!</Title>

        <Card>
          <Skeleton.Text isLoaded={!!category?.category?.balance}>
            <Text style={{ fontWeight: '600', fontSize: 14, color: '#4B4B4B', marginBottom: 7 }}>
              Saldo de pontos
            </Text>
...
