...
    {
      title: 'Início',
      icon: HomeIcon,
      name: 'index',
    },
    {
      title: 'Extrato',
      name: 'extrato',
      icon: ListIcon,
    },
    {
      title: 'Check-in',
      name: 'check-in',
...
