...

  function handleNextModal() {
    setCurrentModalValidation((prev) => prev + 1);
  }

  return (
    <ScrollView style={{ backgroundColor: '#ffffff' }} testID="home-scroll">
      {[SecondaryEmailModal, OptInModal].map(
        (CurrentModal, index) =>
          index === currentModalValidation && <CurrentModal onAction={handleNextModal} />,
      )}
      <Stack.Screen options={{ headerShown: false }} />
      <View style={styles.container}>
...
