...
      component: (id: string) => (
        <Checkbox
          _text={{ fontSize: 14 }}
          colorScheme="blue"
          pointerEvents="none"
          value="3"
          testID="option_3"
          flexDirection="row-reverse"
          isChecked={acceptedConsentOptionsIds.includes(id)}
          onChange={() => handleCheckboxToggle(id)}>
          <Text width="95%">
            Li e aceito o{' '}
            <Text color="blue.500" onPress={openRules}>
...
