...
        <Button
          bgColor="blue.500"
          onPress={onSubmit}
          width="100%"
          marginTop="auto"
          marginBottom="16px"
          testID="confirm-button"
          textAlign="center">
          Confirmar
        </Button>
      </S.BottomContainer>
    </KeyBoardAvoidingContainer>
  );
...
